Fixed src/root.scss fixed thumbnail scale on smaller laptops

--- a/src/root.scss
+++ b/src/root.scss
@@ -62,7 +62,13 @@ section {
     }
 }
 
-@media only screen and (max-width: 1224px) {
+@media only screen and (max-width: 1464px) {
+    section .content {
+        width: 60vw;
+    }
+} 
+
+@media only screen and (max-width: 824px) {
     section .content {
         width: 90vw;
     }
